# anki-rpce

./: .gitignore  ANKI_README.md  Cargo.toml  README.md  deploy-android.bat  justfile  release.bat  start-emulator.bat
.cursor/rules/: Accuracy.mdc
.github/workflows/: rpce-installers.yml  rpce-release.yml
docs/rpce/: AI_NOTES.md  CRITERIA_IMPLEMENTATION_PLAN.md  DEPLOYMENT.md  MODELS.md  PLAN.md  PRD.md  QUESTION_RULES.md  RESULTS.md  RUNNING.md  RUST_CHANGE.md  RUST_CHANGE_CONCEPT.md  SCORING.md  UI_DESIGN.md  rpce_brainlift.md  rpce_practice_questions.md
mobile/: README.md
mobile/app/: build.gradle.kts  settings.gradle.kts
mobile/jni/: Cargo.toml
mobile/jni/src/: lib.rs
proto/anki/: scheduler.proto
pylib/: pyproject.toml
pylib/tests/: test_concept_bury.py  test_points_at_stake.py  test_rpce.py  test_rpce_calibration.py  test_rpce_card_check.py  test_rpce_concepts.py  test_rpce_examiner.py  test_rpce_examiner_eval.py  test_rpce_experiment.py  test_rpce_experiment_run.py  test_rpce_generation.py  test_rpce_gold.py  test_rpce_metrics.py  test_rpce_paraphrase.py  test_rpce_precedence.py  test_rpce_progression.py  test_rpce_quotes.py  test_rpce_refs.py  test_rpce_reset.py  test_rpce_scenarios.py  test_rpce_scores.py  test_rpce_simulations.py  test_rpce_timed.py  test_rpce_transfer_ladder.py
pylib/tools/: rpce_author_workflow.js  rpce_bench.py  rpce_build_quotes.py  rpce_calibration.py  rpce_card_check.py  rpce_cloze_workflow.js  rpce_crash_test.py  rpce_embed_key.py  rpce_examiner_eval.py  rpce_experiment_run.py  (+14 more)
scripts/: run-desktop.sh  run-mobile.sh
(+60 files in other folders)
